@@ -68,7 +68,7 @@ public class JUnitAssertEqualsToAssertThat extends Recipe {
             }
 
             List<Expression> args = method.getArguments();
-            Expression expected = args.get(0);
+            Expression expected = args.getFirst();
             Expression actual = args.get(1);
 
             //always add the import (even if not referenced)
