@@ -69,7 +69,7 @@ public class JUnitAssertNotEqualsToAssertThat extends Recipe {
 
             List<Expression> args = method.getArguments();
 
-            Expression expected = args.get(0);
+            Expression expected = args.getFirst();
             Expression actual = args.get(1);
 
             if (args.size() == 2) {
