@@ -67,7 +67,7 @@ public class JUnitAssertNotNullToAssertThat extends Recipe {
             }
 
             List<Expression> args = method.getArguments();
-            Expression actual = args.get(0);
+            Expression actual = args.getFirst();
 
             if (args.size() == 1) {
                 method = JavaTemplate.builder("assertThat(#{any()}).isNotNull();")
