@@ -48,7 +48,7 @@ public class AssertTrueNullToAssertNull extends Recipe {
             public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                 J.MethodInvocation mi = (J.MethodInvocation) super.visitMethodInvocation(method, ctx);
                 if (ASSERT_TRUE.matches(mi) && isEqualBinaryWithNull(mi)) {
-                    J.Binary binary = (J.Binary) mi.getArguments().get(0);
+                    J.Binary binary = (J.Binary) mi.getArguments().getFirst();
                     Expression nonNullExpression = getNonNullExpression(binary);
 
                     StringBuilder sb = new StringBuilder();
@@ -104,7 +104,7 @@ public class AssertTrueNullToAssertNull extends Recipe {
                     return false;
                 }
 
-                final Expression firstArgument = method.getArguments().get(0);
+                final Expression firstArgument = method.getArguments().getFirst();
                 if (!(firstArgument instanceof J.Binary)) {
                     return false;
                 }
