@@ -65,36 +65,39 @@ public class UseWiremockExtension extends Recipe {
                     doAfterVisit(new ChangeType("org.junit.Rule", "org.junit.jupiter.api.extension.RegisterExtension", true)
                             .getVisitor());
 
-                    Expression arg = n.getArguments().get(0);
+                    Expression arg = n.getArguments().getFirst();
 
                     JavaParser.Builder<?, ?> wiremockParser = JavaParser.fromJavaVersion()
                             .dependsOn(
                                     //language=java
-                                    "" +
-                                    "package com.github.tomakehurst.wiremock.junit5;" +
-                                    "import com.github.tomakehurst.wiremock.core.Options;" +
-                                    "public class WireMockExtension {" +
-                                    "  public native static Builder newInstance();" +
-                                    "  public static class Builder {" +
-                                    "    public native Builder options(Options options);" +
-                                    "    public native Builder failOnUnmatchedRequests(boolean failOnUnmatched);" +
-                                    "    public native WireMockExtension build();" +
-                                    "  }" +
-                                    "}",
+                                    """
+                                    package com.github.tomakehurst.wiremock.junit5;\
+                                    import com.github.tomakehurst.wiremock.core.Options;\
+                                    public class WireMockExtension {\
+                                      public native static Builder newInstance();\
+                                      public static class Builder {\
+                                        public native Builder options(Options options);\
+                                        public native Builder failOnUnmatchedRequests(boolean failOnUnmatched);\
+                                        public native WireMockExtension build();\
+                                      }\
+                                    }\
+                                    """,
                                     //language=java
-                                    "" +
-                                    "package com.github.tomakehurst.wiremock.core;" +
-                                    "public class WireMockConfiguration implements Options {" +
-                                    "  public static native WireMockConfiguration options();" +
-                                    "  public native WireMockConfiguration port(int portNumber);" +
-                                    "  public native WireMockConfiguration dynamicPort();" +
-                                    "  public native WireMockConfiguration httpsPort(Integer httpsPort);" +
-                                    "  public native WireMockConfiguration dynamicHttpsPort();" +
-                                    "}",
+                                    """
+                                    package com.github.tomakehurst.wiremock.core;\
+                                    public class WireMockConfiguration implements Options {\
+                                      public static native WireMockConfiguration options();\
+                                      public native WireMockConfiguration port(int portNumber);\
+                                      public native WireMockConfiguration dynamicPort();\
+                                      public native WireMockConfiguration httpsPort(Integer httpsPort);\
+                                      public native WireMockConfiguration dynamicHttpsPort();\
+                                    }\
+                                    """,
                                     //language=java
-                                    "" +
-                                    "package com.github.tomakehurst.wiremock.core;" +
-                                    "public interface Options {}");
+                                    """
+                                    package com.github.tomakehurst.wiremock.core;\
+                                    public interface Options {}\
+                                    """);
 
                     if (arg instanceof J.Empty) {
                         String newWiremockExtension = "WireMockExtension.newInstance().build()";
@@ -106,8 +109,10 @@ public class UseWiremockExtension extends Recipe {
                     } else {
                         JavaType.Class optsType = JavaType.ShallowClass.build("com.github.tomakehurst.wiremock.core.Options");
                         if (TypeUtils.isAssignableTo(optsType, arg.getType())) {
-                            String newWiremockExtension = "WireMockExtension.newInstance()" +
-                                                          ".options(#{any(com.github.tomakehurst.wiremock.core.Options)})";
+                            String newWiremockExtension = """
+                                                          WireMockExtension.newInstance()\
+                                                          .options(#{any(com.github.tomakehurst.wiremock.core.Options)})\
+                                                          """;
                             if (n.getArguments().size() > 1) {
                                 newWiremockExtension += ".failOnUnmatchedRequests(#{any(boolean)})";
                                 return JavaTemplate.builder(newWiremockExtension + ".build()")
